<?xml version="1.0"?>
<package format="2">
  <name>data</name>
  <version>0.0.0</version>
  <description>
    Data dump.
  </description>
  <license>
    TBD
  </license>
  <author email="mit@mit.edu">
  </author>
  <maintainer email="mit@mit.edu">
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>ff_msgs</depend>
  <depend>trace_astrobee_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag</depend>
</package>
