<?xml version="1.0"?>
<package format="2">
<name>mit_slam</name>
<version>0.0.0</version>
<description>Geometric and inertial SLAM.</description>
<author email="teran@mit.edu">tonio</author>
<maintainer email="teran@mit.edu">tonio</maintainer>
<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>tf2</depend>
	<depend>geometry_msgs</depend>
	<depend>ff_msgs</depend>
	<depend>ff_util</depend>
	<depend>nodelet</depend>
	<depend>std_msgs</depend>
	<depend>pluginlib</depend>
	<depend>actionlib</depend>
	<!-- <depend>teaserpp</depend> -->
	<depend>polhode_alignment</depend>
	<depend>depend</depend>
	<depend>data</depend>
	<depend>external</depend>
	<depend>trace_msgs</depend>

	<export>
	  <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
	</export>
</package>
