<?xml version="1.0"?>
<package format="2">
  <name>motion_planner_interface</name>
  <version>0.0.0</version>
  <description>
    Nodelet for controlling a trajectory generator.
  </description>
  <license>
    TBD
  </license>
  <author email="mit@mit.edu">
  </author>
  <maintainer email="mit@mit.edu">
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>ff_msgs</depend>
  <depend>ff_util</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>trace_msgs</depend>
  <depend>ff_msg_conversions</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
