<?xml version="1.0"?>
<package format="2">
<name>polhode_alignment</name>
<version>0.0.0</version>
<description>Principal axis estimation.</description>
<author email="teran@mit.edu">tonio</author>
<maintainer email="teran@mit.edu">tonio</maintainer>
<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf</depend>
	<depend>tf2</depend>
	<depend>geometry_msgs</depend>
	<depend>ff_msgs</depend>
	<depend>trace_astrobee_interface</depend>
	<depend>std_msgs</depend>
	<depend>pluginlib</depend>
	<depend>actionlib</depend>
</package>
