<?xml version="1.0"?>
<package>
  <name>ff_hw_msgs</name>
  <version>0.0.0</version>
  <description>
    The ff_hw_msgs package
  </description>
  <license>
    TBD
  </license>
  <author email="mit@mit.edu">
  </author>
  <maintainer email="mit@mit.edu">
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export></export>
</package>
